reword email templates

--- a/backend/pingcycle/apps/users/templates/account/email/email_confirmation_message.html
+++ b/backend/pingcycle/apps/users/templates/account/email/email_confirmation_message.html
@@ -12,6 +12,6 @@
         <a href="{{ activate_url }}" style="background-color: #007BFF; padding: 10px 20px; text-decoration: none; color: white; border-radius: 5px;">Proceed to Confirmation</a>
     </p>
     <p>If you didn’t request this, please ignore this email.</p>
-    <p>Best regards,<br>Shop Wiz Team</p>
+    <p>Best regards,<br>PingCycle Team</p>
 </body>
 </html>
