--- a/backend/pingcycle/apps/users/templates/account/email/email_confirmation_signup_message.html
+++ b/backend/pingcycle/apps/users/templates/account/email/email_confirmation_signup_message.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <p>Hello {{ user.username }}!</p>
-    <p>Thank you for registering on shop-wiz.ie. To continue with your account setup, please click on the "Proceed to Confirmation" link below:</p>
+    <p>Thank you for registering on pingcycle.ie. To continue with your account setup, please click on the "Proceed to Confirmation" link below:</p>
     <p>
         <a href="{{ activate_url }}" style="background-color: #007BFF; padding: 10px 20px; text-decoration: none; color: white; border-radius: 5px;">Proceed to Confirmation</a>
     </p>
     <p>If you didn’t request this, please ignore this email.</p>
-    <p>Best regards,<br>Shop Wiz Team</p>
+    <p>Best regards,<br>PingCycle Team</p>
 </body>
 </html>
