--- a/backend/pingcycle/apps/users/templates/account/email/password_reset_key_message.html
+++ b/backend/pingcycle/apps/users/templates/account/email/password_reset_key_message.html
@@ -6,7 +6,7 @@
     <title>Password Reset</title>
 </head>
 <body>
-    <p>Hello from shop-wiz.ie!</p>
+    <p>Hello from pingcycle.org!</p>
     <p>You're receiving this e-mail because you or someone else has requested a password reset for your user account. It can be safely ignored if you did not request a password reset. Click the link below to reset your password:</p>
     <p>
         <a href="{{ password_reset_url }}" style="background-color: #007BFF; padding: 10px 20px; text-decoration: none; color: white; border-radius: 5px;">Reset Password</a>
@@ -14,6 +14,6 @@
     {% if username %}
         <p>In case you forgot, your username is {{ username }}.</p>
     {% endif %}
-    <p>Best regards,<br>Shop Wiz Team</p>
+    <p>Best regards,<br>PingCycle Team</p>
 </body>
 </html>
